--- a/.github/workflows/gradle-publish-github.yml
+++ b/.github/workflows/gradle-publish-github.yml
@@ -30,5 +30,5 @@ jobs:
 
       - name: Publish to GitHub
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_PAT }}
+          GITHUB_TOKEN: ${{ secrets.GH_PAT }}
         run: ./gradlew publishGithub
